[gd_scene load_steps=12 format=3 uid="uid://cot4tcgrx8thu"]

[ext_resource type="Texture2D" uid="uid://cks7td2vvv7bu" path="res://assets/graphic components/Login Page/access popup.png" id="1_8cgp5"]
[ext_resource type="Script" path="res://components/login_field/login_field.gd" id="1_keb1t"]
[ext_resource type="Texture2D" uid="uid://fxxe2bruln2q" path="res://assets/graphic components/Login Page/login_button/button.png" id="2_os744"]
[ext_resource type="Texture2D" uid="uid://vyhrscvjc72r" path="res://assets/graphic components/Login Page/login_button/button_pressed.png" id="3_v7nkv"]
[ext_resource type="Texture2D" uid="uid://d2xwy02mwlh81" path="res://assets/graphic components/Login Page/login_button/button_hovered.png" id="4_x0bgf"]

[sub_resource type="LabelSettings" id="LabelSettings_rtuar"]
font_size = 20
font_color = Color(0.807843, 0, 0, 1)

[sub_resource type="FontFile" id="FontFile_rg4rw"]
subpixel_positioning = 0
msdf_pixel_range = 14
msdf_size = 128
cache/0/23/0/ascent = 0.0
cache/0/23/0/descent = 0.0
cache/0/23/0/underline_position = 0.0
cache/0/23/0/underline_thickness = 0.0
cache/0/23/0/scale = 1.0
cache/0/23/0/kerning_overrides/23/0 = Vector2(0, 0)
cache/0/23/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/23/0/kerning_overrides/24/0 = Vector2(0, 0)
cache/0/23/0/kerning_overrides/25/0 = Vector2(0, 0)
cache/0/23/0/kerning_overrides/26/0 = Vector2(0, 0)
cache/0/23/0/kerning_overrides/27/0 = Vector2(0, 0)
cache/0/23/0/kerning_overrides/28/0 = Vector2(0, 0)
cache/0/23/0/kerning_overrides/29/0 = Vector2(0, 0)
cache/0/23/0/kerning_overrides/30/0 = Vector2(0, 0)
cache/0/23/0/kerning_overrides/31/0 = Vector2(0, 0)
cache/0/23/0/kerning_overrides/32/0 = Vector2(0, 0)
cache/0/23/0/kerning_overrides/33/0 = Vector2(0, 0)
cache/0/23/0/kerning_overrides/34/0 = Vector2(0, 0)
cache/0/23/0/kerning_overrides/35/0 = Vector2(0, 0)
cache/0/23/0/kerning_overrides/36/0 = Vector2(0, 0)
cache/0/23/0/kerning_overrides/37/0 = Vector2(0, 0)
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/23/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/24/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/25/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/26/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/27/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/28/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/29/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/30/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/31/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/32/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/33/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/34/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/35/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/36/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/37/0 = Vector2(0, 0)
cache/0/24/0/ascent = 0.0
cache/0/24/0/descent = 0.0
cache/0/24/0/underline_position = 0.0
cache/0/24/0/underline_thickness = 0.0
cache/0/24/0/scale = 1.0
cache/0/24/0/kerning_overrides/23/0 = Vector2(0, 0)
cache/0/24/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/24/0/kerning_overrides/24/0 = Vector2(0, 0)
cache/0/24/0/kerning_overrides/25/0 = Vector2(0, 0)
cache/0/24/0/kerning_overrides/26/0 = Vector2(0, 0)
cache/0/24/0/kerning_overrides/27/0 = Vector2(0, 0)
cache/0/24/0/kerning_overrides/28/0 = Vector2(0, 0)
cache/0/24/0/kerning_overrides/29/0 = Vector2(0, 0)
cache/0/24/0/kerning_overrides/30/0 = Vector2(0, 0)
cache/0/24/0/kerning_overrides/31/0 = Vector2(0, 0)
cache/0/24/0/kerning_overrides/32/0 = Vector2(0, 0)
cache/0/24/0/kerning_overrides/33/0 = Vector2(0, 0)
cache/0/24/0/kerning_overrides/34/0 = Vector2(0, 0)
cache/0/24/0/kerning_overrides/35/0 = Vector2(0, 0)
cache/0/24/0/kerning_overrides/36/0 = Vector2(0, 0)
cache/0/24/0/kerning_overrides/37/0 = Vector2(0, 0)
cache/0/25/0/ascent = 0.0
cache/0/25/0/descent = 0.0
cache/0/25/0/underline_position = 0.0
cache/0/25/0/underline_thickness = 0.0
cache/0/25/0/scale = 1.0
cache/0/25/0/kerning_overrides/23/0 = Vector2(0, 0)
cache/0/25/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/25/0/kerning_overrides/24/0 = Vector2(0, 0)
cache/0/25/0/kerning_overrides/25/0 = Vector2(0, 0)
cache/0/25/0/kerning_overrides/26/0 = Vector2(0, 0)
cache/0/25/0/kerning_overrides/27/0 = Vector2(0, 0)
cache/0/25/0/kerning_overrides/28/0 = Vector2(0, 0)
cache/0/25/0/kerning_overrides/29/0 = Vector2(0, 0)
cache/0/25/0/kerning_overrides/30/0 = Vector2(0, 0)
cache/0/25/0/kerning_overrides/31/0 = Vector2(0, 0)
cache/0/25/0/kerning_overrides/32/0 = Vector2(0, 0)
cache/0/25/0/kerning_overrides/33/0 = Vector2(0, 0)
cache/0/25/0/kerning_overrides/34/0 = Vector2(0, 0)
cache/0/25/0/kerning_overrides/35/0 = Vector2(0, 0)
cache/0/25/0/kerning_overrides/36/0 = Vector2(0, 0)
cache/0/25/0/kerning_overrides/37/0 = Vector2(0, 0)
cache/0/26/0/ascent = 0.0
cache/0/26/0/descent = 0.0
cache/0/26/0/underline_position = 0.0
cache/0/26/0/underline_thickness = 0.0
cache/0/26/0/scale = 1.0
cache/0/26/0/kerning_overrides/23/0 = Vector2(0, 0)
cache/0/26/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/26/0/kerning_overrides/24/0 = Vector2(0, 0)
cache/0/26/0/kerning_overrides/25/0 = Vector2(0, 0)
cache/0/26/0/kerning_overrides/26/0 = Vector2(0, 0)
cache/0/26/0/kerning_overrides/27/0 = Vector2(0, 0)
cache/0/26/0/kerning_overrides/28/0 = Vector2(0, 0)
cache/0/26/0/kerning_overrides/29/0 = Vector2(0, 0)
cache/0/26/0/kerning_overrides/30/0 = Vector2(0, 0)
cache/0/26/0/kerning_overrides/31/0 = Vector2(0, 0)
cache/0/26/0/kerning_overrides/32/0 = Vector2(0, 0)
cache/0/26/0/kerning_overrides/33/0 = Vector2(0, 0)
cache/0/26/0/kerning_overrides/34/0 = Vector2(0, 0)
cache/0/26/0/kerning_overrides/35/0 = Vector2(0, 0)
cache/0/26/0/kerning_overrides/36/0 = Vector2(0, 0)
cache/0/26/0/kerning_overrides/37/0 = Vector2(0, 0)
cache/0/27/0/ascent = 0.0
cache/0/27/0/descent = 0.0
cache/0/27/0/underline_position = 0.0
cache/0/27/0/underline_thickness = 0.0
cache/0/27/0/scale = 1.0
cache/0/27/0/kerning_overrides/23/0 = Vector2(0, 0)
cache/0/27/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/27/0/kerning_overrides/24/0 = Vector2(0, 0)
cache/0/27/0/kerning_overrides/25/0 = Vector2(0, 0)
cache/0/27/0/kerning_overrides/26/0 = Vector2(0, 0)
cache/0/27/0/kerning_overrides/27/0 = Vector2(0, 0)
cache/0/27/0/kerning_overrides/28/0 = Vector2(0, 0)
cache/0/27/0/kerning_overrides/29/0 = Vector2(0, 0)
cache/0/27/0/kerning_overrides/30/0 = Vector2(0, 0)
cache/0/27/0/kerning_overrides/31/0 = Vector2(0, 0)
cache/0/27/0/kerning_overrides/32/0 = Vector2(0, 0)
cache/0/27/0/kerning_overrides/33/0 = Vector2(0, 0)
cache/0/27/0/kerning_overrides/34/0 = Vector2(0, 0)
cache/0/27/0/kerning_overrides/35/0 = Vector2(0, 0)
cache/0/27/0/kerning_overrides/36/0 = Vector2(0, 0)
cache/0/27/0/kerning_overrides/37/0 = Vector2(0, 0)
cache/0/28/0/ascent = 0.0
cache/0/28/0/descent = 0.0
cache/0/28/0/underline_position = 0.0
cache/0/28/0/underline_thickness = 0.0
cache/0/28/0/scale = 1.0
cache/0/28/0/kerning_overrides/23/0 = Vector2(0, 0)
cache/0/28/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/28/0/kerning_overrides/24/0 = Vector2(0, 0)
cache/0/28/0/kerning_overrides/25/0 = Vector2(0, 0)
cache/0/28/0/kerning_overrides/26/0 = Vector2(0, 0)
cache/0/28/0/kerning_overrides/27/0 = Vector2(0, 0)
cache/0/28/0/kerning_overrides/28/0 = Vector2(0, 0)
cache/0/28/0/kerning_overrides/29/0 = Vector2(0, 0)
cache/0/28/0/kerning_overrides/30/0 = Vector2(0, 0)
cache/0/28/0/kerning_overrides/31/0 = Vector2(0, 0)
cache/0/28/0/kerning_overrides/32/0 = Vector2(0, 0)
cache/0/28/0/kerning_overrides/33/0 = Vector2(0, 0)
cache/0/28/0/kerning_overrides/34/0 = Vector2(0, 0)
cache/0/28/0/kerning_overrides/35/0 = Vector2(0, 0)
cache/0/28/0/kerning_overrides/36/0 = Vector2(0, 0)
cache/0/28/0/kerning_overrides/37/0 = Vector2(0, 0)
cache/0/29/0/ascent = 0.0
cache/0/29/0/descent = 0.0
cache/0/29/0/underline_position = 0.0
cache/0/29/0/underline_thickness = 0.0
cache/0/29/0/scale = 1.0
cache/0/29/0/kerning_overrides/23/0 = Vector2(0, 0)
cache/0/29/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/29/0/kerning_overrides/24/0 = Vector2(0, 0)
cache/0/29/0/kerning_overrides/25/0 = Vector2(0, 0)
cache/0/29/0/kerning_overrides/26/0 = Vector2(0, 0)
cache/0/29/0/kerning_overrides/27/0 = Vector2(0, 0)
cache/0/29/0/kerning_overrides/28/0 = Vector2(0, 0)
cache/0/29/0/kerning_overrides/29/0 = Vector2(0, 0)
cache/0/29/0/kerning_overrides/30/0 = Vector2(0, 0)
cache/0/29/0/kerning_overrides/31/0 = Vector2(0, 0)
cache/0/29/0/kerning_overrides/32/0 = Vector2(0, 0)
cache/0/29/0/kerning_overrides/33/0 = Vector2(0, 0)
cache/0/29/0/kerning_overrides/34/0 = Vector2(0, 0)
cache/0/29/0/kerning_overrides/35/0 = Vector2(0, 0)
cache/0/29/0/kerning_overrides/36/0 = Vector2(0, 0)
cache/0/29/0/kerning_overrides/37/0 = Vector2(0, 0)
cache/0/30/0/ascent = 0.0
cache/0/30/0/descent = 0.0
cache/0/30/0/underline_position = 0.0
cache/0/30/0/underline_thickness = 0.0
cache/0/30/0/scale = 1.0
cache/0/30/0/kerning_overrides/23/0 = Vector2(0, 0)
cache/0/30/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/30/0/kerning_overrides/24/0 = Vector2(0, 0)
cache/0/30/0/kerning_overrides/25/0 = Vector2(0, 0)
cache/0/30/0/kerning_overrides/26/0 = Vector2(0, 0)
cache/0/30/0/kerning_overrides/27/0 = Vector2(0, 0)
cache/0/30/0/kerning_overrides/28/0 = Vector2(0, 0)
cache/0/30/0/kerning_overrides/29/0 = Vector2(0, 0)
cache/0/30/0/kerning_overrides/30/0 = Vector2(0, 0)
cache/0/30/0/kerning_overrides/31/0 = Vector2(0, 0)
cache/0/30/0/kerning_overrides/32/0 = Vector2(0, 0)
cache/0/30/0/kerning_overrides/33/0 = Vector2(0, 0)
cache/0/30/0/kerning_overrides/34/0 = Vector2(0, 0)
cache/0/30/0/kerning_overrides/35/0 = Vector2(0, 0)
cache/0/30/0/kerning_overrides/36/0 = Vector2(0, 0)
cache/0/30/0/kerning_overrides/37/0 = Vector2(0, 0)
cache/0/31/0/ascent = 0.0
cache/0/31/0/descent = 0.0
cache/0/31/0/underline_position = 0.0
cache/0/31/0/underline_thickness = 0.0
cache/0/31/0/scale = 1.0
cache/0/31/0/kerning_overrides/23/0 = Vector2(0, 0)
cache/0/31/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/31/0/kerning_overrides/24/0 = Vector2(0, 0)
cache/0/31/0/kerning_overrides/25/0 = Vector2(0, 0)
cache/0/31/0/kerning_overrides/26/0 = Vector2(0, 0)
cache/0/31/0/kerning_overrides/27/0 = Vector2(0, 0)
cache/0/31/0/kerning_overrides/28/0 = Vector2(0, 0)
cache/0/31/0/kerning_overrides/29/0 = Vector2(0, 0)
cache/0/31/0/kerning_overrides/30/0 = Vector2(0, 0)
cache/0/31/0/kerning_overrides/31/0 = Vector2(0, 0)
cache/0/31/0/kerning_overrides/32/0 = Vector2(0, 0)
cache/0/31/0/kerning_overrides/33/0 = Vector2(0, 0)
cache/0/31/0/kerning_overrides/34/0 = Vector2(0, 0)
cache/0/31/0/kerning_overrides/35/0 = Vector2(0, 0)
cache/0/31/0/kerning_overrides/36/0 = Vector2(0, 0)
cache/0/31/0/kerning_overrides/37/0 = Vector2(0, 0)
cache/0/32/0/ascent = 0.0
cache/0/32/0/descent = 0.0
cache/0/32/0/underline_position = 0.0
cache/0/32/0/underline_thickness = 0.0
cache/0/32/0/scale = 1.0
cache/0/32/0/kerning_overrides/23/0 = Vector2(0, 0)
cache/0/32/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/32/0/kerning_overrides/24/0 = Vector2(0, 0)
cache/0/32/0/kerning_overrides/25/0 = Vector2(0, 0)
cache/0/32/0/kerning_overrides/26/0 = Vector2(0, 0)
cache/0/32/0/kerning_overrides/27/0 = Vector2(0, 0)
cache/0/32/0/kerning_overrides/28/0 = Vector2(0, 0)
cache/0/32/0/kerning_overrides/29/0 = Vector2(0, 0)
cache/0/32/0/kerning_overrides/30/0 = Vector2(0, 0)
cache/0/32/0/kerning_overrides/31/0 = Vector2(0, 0)
cache/0/32/0/kerning_overrides/32/0 = Vector2(0, 0)
cache/0/32/0/kerning_overrides/33/0 = Vector2(0, 0)
cache/0/32/0/kerning_overrides/34/0 = Vector2(0, 0)
cache/0/32/0/kerning_overrides/35/0 = Vector2(0, 0)
cache/0/32/0/kerning_overrides/36/0 = Vector2(0, 0)
cache/0/32/0/kerning_overrides/37/0 = Vector2(0, 0)
cache/0/33/0/ascent = 0.0
cache/0/33/0/descent = 0.0
cache/0/33/0/underline_position = 0.0
cache/0/33/0/underline_thickness = 0.0
cache/0/33/0/scale = 1.0
cache/0/33/0/kerning_overrides/23/0 = Vector2(0, 0)
cache/0/33/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/33/0/kerning_overrides/24/0 = Vector2(0, 0)
cache/0/33/0/kerning_overrides/25/0 = Vector2(0, 0)
cache/0/33/0/kerning_overrides/26/0 = Vector2(0, 0)
cache/0/33/0/kerning_overrides/27/0 = Vector2(0, 0)
cache/0/33/0/kerning_overrides/28/0 = Vector2(0, 0)
cache/0/33/0/kerning_overrides/29/0 = Vector2(0, 0)
cache/0/33/0/kerning_overrides/30/0 = Vector2(0, 0)
cache/0/33/0/kerning_overrides/31/0 = Vector2(0, 0)
cache/0/33/0/kerning_overrides/32/0 = Vector2(0, 0)
cache/0/33/0/kerning_overrides/33/0 = Vector2(0, 0)
cache/0/33/0/kerning_overrides/34/0 = Vector2(0, 0)
cache/0/33/0/kerning_overrides/35/0 = Vector2(0, 0)
cache/0/33/0/kerning_overrides/36/0 = Vector2(0, 0)
cache/0/33/0/kerning_overrides/37/0 = Vector2(0, 0)
cache/0/34/0/ascent = 0.0
cache/0/34/0/descent = 0.0
cache/0/34/0/underline_position = 0.0
cache/0/34/0/underline_thickness = 0.0
cache/0/34/0/scale = 1.0
cache/0/34/0/kerning_overrides/23/0 = Vector2(0, 0)
cache/0/34/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/34/0/kerning_overrides/24/0 = Vector2(0, 0)
cache/0/34/0/kerning_overrides/25/0 = Vector2(0, 0)
cache/0/34/0/kerning_overrides/26/0 = Vector2(0, 0)
cache/0/34/0/kerning_overrides/27/0 = Vector2(0, 0)
cache/0/34/0/kerning_overrides/28/0 = Vector2(0, 0)
cache/0/34/0/kerning_overrides/29/0 = Vector2(0, 0)
cache/0/34/0/kerning_overrides/30/0 = Vector2(0, 0)
cache/0/34/0/kerning_overrides/31/0 = Vector2(0, 0)
cache/0/34/0/kerning_overrides/32/0 = Vector2(0, 0)
cache/0/34/0/kerning_overrides/33/0 = Vector2(0, 0)
cache/0/34/0/kerning_overrides/34/0 = Vector2(0, 0)
cache/0/34/0/kerning_overrides/35/0 = Vector2(0, 0)
cache/0/34/0/kerning_overrides/36/0 = Vector2(0, 0)
cache/0/34/0/kerning_overrides/37/0 = Vector2(0, 0)
cache/0/35/0/ascent = 0.0
cache/0/35/0/descent = 0.0
cache/0/35/0/underline_position = 0.0
cache/0/35/0/underline_thickness = 0.0
cache/0/35/0/scale = 1.0
cache/0/35/0/kerning_overrides/23/0 = Vector2(0, 0)
cache/0/35/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/35/0/kerning_overrides/24/0 = Vector2(0, 0)
cache/0/35/0/kerning_overrides/25/0 = Vector2(0, 0)
cache/0/35/0/kerning_overrides/26/0 = Vector2(0, 0)
cache/0/35/0/kerning_overrides/27/0 = Vector2(0, 0)
cache/0/35/0/kerning_overrides/28/0 = Vector2(0, 0)
cache/0/35/0/kerning_overrides/29/0 = Vector2(0, 0)
cache/0/35/0/kerning_overrides/30/0 = Vector2(0, 0)
cache/0/35/0/kerning_overrides/31/0 = Vector2(0, 0)
cache/0/35/0/kerning_overrides/32/0 = Vector2(0, 0)
cache/0/35/0/kerning_overrides/33/0 = Vector2(0, 0)
cache/0/35/0/kerning_overrides/34/0 = Vector2(0, 0)
cache/0/35/0/kerning_overrides/35/0 = Vector2(0, 0)
cache/0/35/0/kerning_overrides/36/0 = Vector2(0, 0)
cache/0/35/0/kerning_overrides/37/0 = Vector2(0, 0)
cache/0/36/0/ascent = 0.0
cache/0/36/0/descent = 0.0
cache/0/36/0/underline_position = 0.0
cache/0/36/0/underline_thickness = 0.0
cache/0/36/0/scale = 1.0
cache/0/36/0/kerning_overrides/23/0 = Vector2(0, 0)
cache/0/36/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/36/0/kerning_overrides/24/0 = Vector2(0, 0)
cache/0/36/0/kerning_overrides/25/0 = Vector2(0, 0)
cache/0/36/0/kerning_overrides/26/0 = Vector2(0, 0)
cache/0/36/0/kerning_overrides/27/0 = Vector2(0, 0)
cache/0/36/0/kerning_overrides/28/0 = Vector2(0, 0)
cache/0/36/0/kerning_overrides/29/0 = Vector2(0, 0)
cache/0/36/0/kerning_overrides/30/0 = Vector2(0, 0)
cache/0/36/0/kerning_overrides/31/0 = Vector2(0, 0)
cache/0/36/0/kerning_overrides/32/0 = Vector2(0, 0)
cache/0/36/0/kerning_overrides/33/0 = Vector2(0, 0)
cache/0/36/0/kerning_overrides/34/0 = Vector2(0, 0)
cache/0/36/0/kerning_overrides/35/0 = Vector2(0, 0)
cache/0/36/0/kerning_overrides/36/0 = Vector2(0, 0)
cache/0/36/0/kerning_overrides/37/0 = Vector2(0, 0)
cache/0/37/0/ascent = 0.0
cache/0/37/0/descent = 0.0
cache/0/37/0/underline_position = 0.0
cache/0/37/0/underline_thickness = 0.0
cache/0/37/0/scale = 1.0
cache/0/37/0/kerning_overrides/23/0 = Vector2(0, 0)
cache/0/37/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/37/0/kerning_overrides/24/0 = Vector2(0, 0)
cache/0/37/0/kerning_overrides/25/0 = Vector2(0, 0)
cache/0/37/0/kerning_overrides/26/0 = Vector2(0, 0)
cache/0/37/0/kerning_overrides/27/0 = Vector2(0, 0)
cache/0/37/0/kerning_overrides/28/0 = Vector2(0, 0)
cache/0/37/0/kerning_overrides/29/0 = Vector2(0, 0)
cache/0/37/0/kerning_overrides/30/0 = Vector2(0, 0)
cache/0/37/0/kerning_overrides/31/0 = Vector2(0, 0)
cache/0/37/0/kerning_overrides/32/0 = Vector2(0, 0)
cache/0/37/0/kerning_overrides/33/0 = Vector2(0, 0)
cache/0/37/0/kerning_overrides/34/0 = Vector2(0, 0)
cache/0/37/0/kerning_overrides/35/0 = Vector2(0, 0)
cache/0/37/0/kerning_overrides/36/0 = Vector2(0, 0)
cache/0/37/0/kerning_overrides/37/0 = Vector2(0, 0)

[sub_resource type="LabelSettings" id="LabelSettings_j0ui2"]
font = SubResource("FontFile_rg4rw")
font_size = 37
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_q5o08"]
font_size = 50

[sub_resource type="Theme" id="Theme_2o0yd"]
resource_local_to_scene = true
default_font_size = 26

[sub_resource type="GDScript" id="GDScript_snb35"]
script/source = "extends LineEdit


# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.


"

[node name="CanvasLayer" type="CanvasLayer"]
follow_viewport_enabled = true
script = ExtResource("1_keb1t")

[node name="Control" type="Control" parent="."]
clip_contents = true
layout_mode = 3
anchor_left = 0.488
anchor_top = 0.5
anchor_right = 0.488
anchor_bottom = 0.5
offset_left = -324.96
offset_top = -482.5
offset_right = 325.04
offset_bottom = 482.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 6

[node name="TextureRect" type="TextureRect" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -325.0
offset_top = -482.5
offset_right = 1325.0
offset_bottom = 2067.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.38, 0.38)
size_flags_horizontal = 6
size_flags_vertical = 6
texture = ExtResource("1_8cgp5")
stretch_mode = 4

[node name="Start" type="TextureButton" parent="Control/TextureRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.762
anchor_top = 0.915
anchor_right = 0.762
anchor_bottom = 0.915
offset_left = -257.3
offset_top = -83.25
offset_right = 258.7
offset_bottom = 82.75
mouse_default_cursor_shape = 2
texture_normal = ExtResource("2_os744")
texture_pressed = ExtResource("3_v7nkv")
texture_hover = ExtResource("4_x0bgf")

[node name="Quit" type="TextureButton" parent="Control/TextureRect"]
layout_mode = 0
offset_left = 110.526
offset_top = 2246.05
offset_right = 626.526
offset_bottom = 2412.05
texture_normal = ExtResource("2_os744")
texture_pressed = ExtResource("3_v7nkv")
texture_hover = ExtResource("4_x0bgf")

[node name="Label2" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.355
anchor_top = 0.397
anchor_right = 0.355
anchor_bottom = 0.397
offset_left = -187.75
offset_top = -12.605
offset_right = 188.25
offset_bottom = 13.395
text = "Il codice inserito non esiste"
label_settings = SubResource("LabelSettings_rtuar")

[node name="Button Start Text" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.737
anchor_top = 0.916
anchor_right = 0.737
anchor_bottom = 0.916
offset_left = -86.05
offset_top = -23.4401
offset_right = 85.95
offset_bottom = 23.5599
text = "Start"
label_settings = SubResource("LabelSettings_j0ui2")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button Start Text2" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.737
anchor_top = 0.916
anchor_right = 0.737
anchor_bottom = 0.916
offset_left = -423.05
offset_top = -25.44
offset_right = -251.05
offset_bottom = 21.56
text = "Quit"
label_settings = SubResource("LabelSettings_j0ui2")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Title" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.182
anchor_top = 0.068
anchor_right = 0.182
anchor_bottom = 0.068
offset_left = -78.3
offset_top = -36.12
offset_right = 78.7
offset_bottom = 35.88
text = "Accedi"
label_settings = SubResource("LabelSettings_q5o08")

[node name="LineEdit" type="LineEdit" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.466
anchor_top = 0.327
anchor_right = 0.466
anchor_bottom = 0.327
offset_left = -265.9
offset_top = -35.055
offset_right = 266.1
offset_bottom = 35.945
theme = SubResource("Theme_2o0yd")
placeholder_text = "codice"
clear_button_enabled = true
script = SubResource("GDScript_snb35")

[node name="Label" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.238
anchor_top = 0.265
anchor_right = 0.238
anchor_bottom = 0.265
offset_left = -115.7
offset_top = -13.225
offset_right = 111.3
offset_bottom = 12.775
text = "Inserisci il codice dell'azienda:"

[connection signal="ready" from="." to="." method="_on_ready"]
[connection signal="pressed" from="Control/TextureRect/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Control/TextureRect/Quit" to="." method="_on_quit_pressed"]
[connection signal="ready" from="Control/Label2" to="." method="_on_label_2_ready"]
[connection signal="text_changed" from="Control/LineEdit" to="." method="_on_line_edit_text_changed"]
